docs: 프로젝트 주요 기능 및 구조 업데이트 (README.md)